# evm-in-wasm

./: Cargo.toml  README.md
evm-in-wasm/: Cargo.toml
evm-nogas/: Cargo.toml
evm-nogas/src/: lib.rs
evm-nogas/src/backend/: memory.rs  mod.rs
evm-nogas/src/executor/stack/: executor.rs  memory.rs  mod.rs
src/backend/: mod.rs
src/executor/stack/: executor.rs  memory.rs
