[package]
name = "evm"
version = "0.1.0"
license = "Apache-2.0"
authors = ["tiannian <dtiannian@gmail.com>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine without gas"
repository = "https://github.com/tiannian/evm-nogas"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
log = { version = "0.4", default-features = false }
evm-core = { version = "0.33", default-features = false }
evm-runtime = { version = "0.33", default-features = false }
sha3 = { version = "0.8", default-features = false }
rlp = { version = "0.5", default-features = false }
primitive-types = { version = "0.10", default-features = false, features = ["rlp"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"], optional = true }
ethereum = { version = ">= 0.10, <= 0.11", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
auto_impl = "0.5.0"

[features]
with-codec = ["codec", "scale-info", "evm-core/with-codec", "primitive-types/codec", "primitive-types/scale-info", "ethereum/with-codec"]
with-serde = ["serde", "evm-core/with-serde", "primitive-types/serde", "ethereum/with-serde"]

